fixed croppie margin bottom

--- a/src/modules/shared/components/croppie/croppie.component.scss
+++ b/src/modules/shared/components/croppie/croppie.component.scss
@@ -7,7 +7,7 @@ app-croppie {
 	&>.img-thumbnail {
 
 		padding				: 0.25rem;
-		margin-bottom		: 5rem;
+		margin-bottom		: 3rem;
 		background-color	: rgb(30, 30, 30);
 		border				: 1px solid rgba(255, 255, 255, 0.3);
 		border-radius		: 0.25rem;
